Add main maven dependencies to main pom file